# nn-playground

./: README.md  nn-playground.cabal
app/: Main.hs
src/: NeuralNetwork.hs
