name:                nn-playground
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ann#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NeuralNetwork
  build-depends:       base >= 4.7 && < 5
                     , statistics  >= 0.13.0.0 && < 0.14.0.0
                     , vector      >= 0.10.0.0 && < 0.12.0.0
                     , random
                     , MonadRandom >= 0.4  && < 0.5
  default-language:    Haskell2010

executable ann
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nn-playground
                     , statistics  >= 0.13.0.0 && < 0.14.0.0
                     , vector      >= 0.10.0.0 && < 0.12.0.0
                     , random
                     , MonadRandom >= 0.4 && < 0.5
  default-language:    Haskell2010

test-suite nn-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nn-playground
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ann
